syntax = "proto3";

package testdata;
option go_package = "./;testdata";

import "google/api/annotations.proto";

service Order {
  rpc RequestForRelease(ReleaseRequest) returns (ReleaseResponse) {
    option (google.api.http) = {
      post: "/v1/request_for_release"
      body: "*"
    };
  }
}

message ReleaseRequest {
  string order_number = 1;
  string requester = 2;
  string approver = 3;
}

message ReleaseResponse {
  int64 code = 1;
  string message = 2;
}
